# learnc

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_osx.sh  main.c
chapters/: one.c  one.h  scope.c  scope.h  utils.c  utils.h
examples/: main.c  main.cpp
